# python-t-test

./: .pre-commit-config.yaml  README.md  __init__.py  demo.ipynb  pyproject.toml  ttest.py
.github/workflows/: ci.yml
src/ttest/: __init__.py  core.py
tests/: __init__.py  conftest.py  test_ttest.py
