[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-t-test"
version = "0.1.0"
description = "Python T-Test and Confidence Interval Estimation"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "pyright>=1.1.403",
  "pytest-cov>=5.0.0",
  "scipy",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pre-commit",
  "ruff",
  "pyright",
  "matplotlib",
  "jupyter",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 88
exclude = ["demo.ipynb"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.8"
reportMissingTypeStubs = false
reportMissingImports = false

